--- a/clothing-shop/package.json
+++ b/clothing-shop/package.json
@@ -32,6 +32,9 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6"
   }
 }
