--- a/clothing-shop/package.json
+++ b/clothing-shop/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0"
   }
 }
