--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/AssouaAlbert/Clothing-shop#readme",
   "devDependencies": {
     "firebase": "^7.14.6",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "react-stripe-checkout": "^2.6.3"
   }
 }
