--- a/clothing-shop/package.json
+++ b/clothing-shop/package.json
@@ -2,6 +2,10 @@
   "name": "clothing-shop",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.14.1",
+    "npm": "6.14.2"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
