--- a/clothing-shop/client/package.json
+++ b/clothing-shop/client/package.json
@@ -2,6 +2,7 @@
   "name": "clothing-shop",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "engines": {
     "node": "12.14.1",
     "npm": "6.14.2"
